--- a/secondapp/templates/show.html
+++ b/secondapp/templates/show.html
@@ -1,5 +1,29 @@
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-{% for c in list %}
-<p>{{c.id}}    {{c.name}}  {{c.sido}} {{c.address}}   {{c.tel}}   {{c.medical}}  {{c.room}}   </p>
-{% endfor %}
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th>순번</th>
+        <th>병원명</th>
+        <th>주소</th>
+      </tr>
+    </thead>
+    <tbody>
+     {% for c in list %}
+      <tr>
+        <td>{c.id}}</td>
+        <td>{{c.name}}</td>
+        <td>{{c.address}}</td>
+      </tr>
+     {% endfor %}
+    </tbody>
+  </table>
+
 
